home/Deployments/vaultwarden/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-svc
  labels:
    app: vaultwarden-svc
spec:
  ports:
  - port: 80
    name: web
  selector:
    app: vaultwarden-app
