home/Deployments/vaultwarden/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-ingress
  namespace: vaultwarden-system
  annotations:
    kubernetes.io/ingress.class: nginx-external
spec:
  rules:
  - host: pass.heyit.works
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vaultwarden-svc
            port:
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-ingress-internal
  namespace: vaultwarden-system
  annotations:
    kubernetes.io/ingress.class: nginx-internal
spec:
  rules:
  - host: pass.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vaultwarden-svc
            port:
              number: 80
